syntax = "proto3";

package service;

option go_package = "github.com/narantyomaulana/go-grpc-ercommerce-be/pb/service";

import "common/base_response.proto";

service HelloWorldService {
  rpc HelloWord(HelloWorldRequest) returns (HelloWorldResponse);

}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  common.BaseResponse base = 1;
  string message = 2;
}